# ColorSchemes

./: .gitignore  README.md  colorschemes.py  pyproject.toml  setup.py
colorschemes/: __init__.py  colorschemes.py
images/: readme.txt
