[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorschemes"
# Read version from colorschemes/VERSION.txt
dynamic = ["version"]
description = "colorschemes: A package for aesthetically pleasing and colorblindness-friendly color schemes"
authors = [{ name = "Ethan Dintzner" }]
readme = { text = "colorschemes contains a collection of several hundred multicolor palettes from Color Inspirations by Darius A. Monsef IV." }
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.0.0",
  "matplotlib>=3.0.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = { file = "colorschemes/VERSION.txt" }

# Explicitly list the package (like packages=['colorschemes'])
[tool.setuptools.packages]
find = { include = ["colorschemes"] }

# Include *.txt files inside the colorschemes package (like package_data)
[tool.setuptools.package-data]
colorschemes = ["*.txt"]